<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="94dp">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/secondary"
        tools:layout_editor_absoluteX="335dp"
        tools:layout_editor_absoluteY="35dp"
        tools:text="@string/title_forum" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/logo_horizontal_verde"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_forum"
        android:textColor="@color/darkaqua"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="89dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_topic1"
        android:textColor="@color/secondary"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="123dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario7"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_respostas_topic1"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="169dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/icon_comentar"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="169dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autor"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="142dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/logo_horizontal_verde"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_topic2"
        android:textColor="@color/secondary"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="217dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario8"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="236dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_respostas_topic2"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="263dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/icon_comentar"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="263dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autor"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="236dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/logo_horizontal_verde"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="35dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_topic3"
        android:textColor="@color/darkaqua"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autor"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="333dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_respostas_topic3"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="360dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/icon_comentar"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="360dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario9"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="333dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_topic4"
        android:textColor="@color/darkaqua"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="412dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario10"
        tools:layout_editor_absoluteX="120dp"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_respostas_topic4"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="458dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/icon_comentar"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="458dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autor"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="431dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_topic5"
        android:textColor="@color/darkaqua"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="503dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_autor"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="522dp" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:srcCompat="@drawable/icon_comentar"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_respostas_topic5"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="549dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_usuario11"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="522dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:text="@string/btn_criartopico"
        android:textAllCaps="false"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="594dp" />

</androidx.constraintlayout.widget.ConstraintLayout>