<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-8dp">

    <Button
        android:id="@+id/btn_login_google"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="82dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="80dp"
        android:background="@color/lightgray"
        android:drawableStart="@drawable/icon_google"
        android:drawablePadding="0dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/login_btn_google"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/darkgray"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="144dp"
        android:text="@string/login_criesuaconta"
        android:textColor="@color/secondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login_google" />

    <EditText
        android:id="@+id/form_nome"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:autofillHints="@string/cadastro_hint_nomecompleto"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_nomecompleto"
        android:inputType="text|textPersonName"
        android:textColorHint="@color/darkgray"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/form_username"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/cadastro_hint_usuario"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_usuario"
        android:inputType="text|textPersonName"
        android:textColorHint="@color/darkgray"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        app:layout_constraintEnd_toEndOf="@+id/form_nome"
        app:layout_constraintStart_toStartOf="@+id/form_nome"
        app:layout_constraintTop_toBottomOf="@+id/form_nome" />

    <EditText
        android:id="@+id/form_email"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/cadastro_hint_email"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_email"
        android:inputType="text|textEmailAddress"
        android:textColorHint="@color/darkgray"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        app:layout_constraintEnd_toEndOf="@+id/form_username"
        app:layout_constraintStart_toStartOf="@+id/form_username"
        app:layout_constraintTop_toBottomOf="@+id/form_username" />


    <EditText
        android:id="@+id/form_celular"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/cadastro_hint_celular"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_celular"
        android:inputType="phone"
        android:textColorHint="@color/darkgray"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        app:layout_constraintEnd_toEndOf="@+id/form_email"
        app:layout_constraintStart_toStartOf="@+id/form_email"
        app:layout_constraintTop_toBottomOf="@+id/form_email" />

    <EditText
        android:id="@+id/form_senha"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/cadastro_hint_senha"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_senha"
        android:inputType="text|textPassword"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        android:textColorHint="@color/darkgray"
        app:layout_constraintEnd_toEndOf="@+id/form_celular"
        app:layout_constraintStart_toStartOf="@+id/form_celular"
        app:layout_constraintTop_toBottomOf="@+id/form_celular" />

    <EditText
        android:id="@+id/form_confir_senha"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:layout_marginTop="15dp"
        android:autofillHints="@string/cadastro_hint_senha"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/cadastro_hint_confirsenha"
        android:inputType="text|textPassword"
        android:paddingStart="15sp"
        android:paddingEnd="15sp"
        android:textColorHint="@color/darkgray"
        app:layout_constraintEnd_toEndOf="@+id/form_senha"
        app:layout_constraintStart_toStartOf="@+id/form_senha"
        app:layout_constraintTop_toBottomOf="@+id/form_senha" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="130dp"
        android:text="@string/login_btn_cadastre"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/button_style"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_confir_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>