<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TelaPerfil">

    <!--    Inicio Menu Bottom-->

    <Button
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@color/lightgray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginBottom="30dp"
        android:background="@color/transparent"
        android:scaleType="centerInside"
        android:translationZ="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/menu_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/menu_bar"
        app:srcCompat="@drawable/btn_add" />

    <ImageButton
        android:id="@+id/btn_forum"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:background="@color/transparent"
        android:contentDescription="@string/menu_bottom_forum"
        android:scaleType="centerInside"
        android:translationZ="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_inicio"
        app:layout_constraintStart_toEndOf="@+id/btn_inicio"
        app:srcCompat="@drawable/icon_forum"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_menu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:background="@color/transparent"
        android:contentDescription="@string/menu_bottom_menu"
        android:scaleType="centerInside"
        android:translationZ="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_info"
        app:layout_constraintEnd_toEndOf="@+id/menu_bar"
        app:srcCompat="@drawable/icon_menu"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btn_inicio"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="@color/transparent"
        android:contentDescription="@string/menu_bottom_inicio"
        android:scaleType="centerInside"
        android:translationZ="10sp"
        app:layout_constraintStart_toStartOf="@+id/menu_bar"
        app:layout_constraintTop_toTopOf="@+id/menu_bar"
        app:srcCompat="@drawable/icon_inicio"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btn_info"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="35dp"
        android:background="@color/transparent"
        android:contentDescription="@string/menu_bottom_info"
        android:scaleType="centerInside"
        android:translationZ="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_forum"
        app:layout_constraintEnd_toStartOf="@+id/btn_menu"
        app:srcCompat="@drawable/icon_info"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />


    <!--fim Menu bottom-->



</androidx.constraintlayout.widget.ConstraintLayout>